--- a/Household_Authority_Inequality.ipynb
+++ b/Household_Authority_Inequality.ipynb
@@ -13,30 +13,6 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "a_ogBLSd_rJ9",
-        "outputId": "c1040763-9b1f-4253-d4ff-5fe02420f986"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\u001b[?25l\r\u001b[K     |▋                               | 10 kB 26.5 MB/s eta 0:00:01\r\u001b[K     |█▏                              | 20 kB 25.5 MB/s eta 0:00:01\r\u001b[K     |█▊                              | 30 kB 13.2 MB/s eta 0:00:01\r\u001b[K     |██▎                             | 40 kB 4.7 MB/s eta 0:00:01\r\u001b[K     |██▉                             | 51 kB 4.7 MB/s eta 0:00:01\r\u001b[K     |███▌                            | 61 kB 5.6 MB/s eta 0:00:01\r\u001b[K     |████                            | 71 kB 6.1 MB/s eta 0:00:01\r\u001b[K     |████▋                           | 81 kB 5.7 MB/s eta 0:00:01\r\u001b[K     |█████▏                          | 92 kB 6.3 MB/s eta 0:00:01\r\u001b[K     |█████▊                          | 102 kB 5.3 MB/s eta 0:00:01\r\u001b[K     |██████▎                         | 112 kB 5.3 MB/s eta 0:00:01\r\u001b[K     |███████                         | 122 kB 5.3 MB/s eta 0:00:01\r\u001b[K     |███████▌                        | 133 kB 5.3 MB/s eta 0:00:01\r\u001b[K     |████████                        | 143 kB 5.3 MB/s eta 0:00:01\r\u001b[K     |████████▋                       | 153 kB 5.3 MB/s eta 0:00:01\r\u001b[K     |█████████▏                      | 163 kB 5.3 MB/s eta 0:00:01\r\u001b[K     |█████████▉                      | 174 kB 5.3 MB/s eta 0:00:01\r\u001b[K     |██████████▍                     | 184 kB 5.3 MB/s eta 0:00:01\r\u001b[K     |███████████                     | 194 kB 5.3 MB/s eta 0:00:01\r\u001b[K     |███████████▌                    | 204 kB 5.3 MB/s eta 0:00:01\r\u001b[K     |████████████                    | 215 kB 5.3 MB/s eta 0:00:01\r\u001b[K     |████████████▋                   | 225 kB 5.3 MB/s eta 0:00:01\r\u001b[K     |█████████████▎                  | 235 kB 5.3 MB/s eta 0:00:01\r\u001b[K     |█████████████▉                  | 245 kB 5.3 MB/s eta 0:00:01\r\u001b[K     |██████████████▍                 | 256 kB 5.3 MB/s eta 0:00:01\r\u001b[K     |███████████████                 | 266 kB 5.3 MB/s eta 0:00:01\r\u001b[K     |███████████████▌                | 276 kB 5.3 MB/s eta 0:00:01\r\u001b[K     |████████████████                | 286 kB 5.3 MB/s eta 0:00:01\r\u001b[K     |████████████████▊               | 296 kB 5.3 MB/s eta 0:00:01\r\u001b[K     |█████████████████▎              | 307 kB 5.3 MB/s eta 0:00:01\r\u001b[K     |█████████████████▉              | 317 kB 5.3 MB/s eta 0:00:01\r\u001b[K     |██████████████████▍             | 327 kB 5.3 MB/s eta 0:00:01\r\u001b[K     |███████████████████             | 337 kB 5.3 MB/s eta 0:00:01\r\u001b[K     |███████████████████▋            | 348 kB 5.3 MB/s eta 0:00:01\r\u001b[K     |████████████████████▏           | 358 kB 5.3 MB/s eta 0:00:01\r\u001b[K     |████████████████████▊           | 368 kB 5.3 MB/s eta 0:00:01\r\u001b[K     |█████████████████████▎          | 378 kB 5.3 MB/s eta 0:00:01\r\u001b[K     |█████████████████████▉          | 389 kB 5.3 MB/s eta 0:00:01\r\u001b[K     |██████████████████████▍         | 399 kB 5.3 MB/s eta 0:00:01\r\u001b[K     |███████████████████████         | 409 kB 5.3 MB/s eta 0:00:01\r\u001b[K     |███████████████████████▋        | 419 kB 5.3 MB/s eta 0:00:01\r\u001b[K     |████████████████████████▏       | 430 kB 5.3 MB/s eta 0:00:01\r\u001b[K     |████████████████████████▊       | 440 kB 5.3 MB/s eta 0:00:01\r\u001b[K     |█████████████████████████▎      | 450 kB 5.3 MB/s eta 0:00:01\r\u001b[K     |██████████████████████████      | 460 kB 5.3 MB/s eta 0:00:01\r\u001b[K     |██████████████████████████▌     | 471 kB 5.3 MB/s eta 0:00:01\r\u001b[K     |███████████████████████████     | 481 kB 5.3 MB/s eta 0:00:01\r\u001b[K     |███████████████████████████▋    | 491 kB 5.3 MB/s eta 0:00:01\r\u001b[K     |████████████████████████████▏   | 501 kB 5.3 MB/s eta 0:00:01\r\u001b[K     |████████████████████████████▊   | 512 kB 5.3 MB/s eta 0:00:01\r\u001b[K     |█████████████████████████████▍  | 522 kB 5.3 MB/s eta 0:00:01\r\u001b[K     |██████████████████████████████  | 532 kB 5.3 MB/s eta 0:00:01\r\u001b[K     |██████████████████████████████▌ | 542 kB 5.3 MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████ | 552 kB 5.3 MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▋| 563 kB 5.3 MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 569 kB 5.3 MB/s \n",
-            "\u001b[?25h"
-          ]
-        }
-      ],
-      "source": [
-        "!pip install --quiet shap"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
         "id": "E0UP-ZEuorSN"
       },
       "outputs": [],
@@ -46,21 +22,21 @@
         "import gdown\n",
         "import pandas as pd\n",
         "import numpy as np\n",
-        "import string\n",
-        "import re\n",
-        "import math\n",
-        "import ast\n",
         "import seaborn as sns\n",
         "import matplotlib.pyplot as plt\n",
-        "import shap\n",
+        "import statsmodels.api as sm\n",
         "from sklearn.experimental import enable_iterative_imputer\n",
         "from sklearn.impute import IterativeImputer\n",
-        "from sklearn.ensemble import ExtraTreesRegressor\n",
         "from sklearn.linear_model import LinearRegression\n",
         "from scipy import stats\n",
-        "from collections import Counter\n",
-        "from textblob import Word\n",
-        "from sklearn.linear_model import LinearRegression"
+        "from scipy.stats import pearsonr\n",
+        "from sklearn.linear_model import LinearRegression\n",
+        "from statsmodels.tsa.stattools import adfuller\n",
+        "from statsmodels.graphics.tsaplots import plot_acf\n",
+        "from statsmodels.graphics.tsaplots import plot_pacf\n",
+        "from sklearn.metrics import r2_score\n",
+        "from statsmodels.tsa.api import ARIMA\n",
+        "from sklearn.metrics import mean_squared_error"
       ]
     },
     {
@@ -94,6 +70,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Prepare the employment data\n",
         "emp_df = load_data('13ZCJJ8QCcMc-encEBvbmY1Cp_mPOcAkY')\n",
         "emp_df.drop(['Series Code','Country Code'], axis=1, inplace=True)\n",
         "emp_df.columns = ['Series', 'Country'] + [str(i) for i in range(2003,2019)]"
@@ -284,6 +261,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Melt the data to transform data structure\n",
         "melted_emp_df = pd.melt(emp_df, id_vars=['Series', 'Country'], \n",
         "                    var_name='Year', value_name='Value')\n",
         "melted_emp_df.tail()"
@@ -468,6 +446,8 @@
     {
       "cell_type": "code",
       "source": [
+        "# Pivot the data with the rows: year and columns: indicator\n",
+        "\n",
         "pivoted_emp_df = pd.pivot_table(melted_emp_df, index=['Country','Year'], \n",
         "                            columns='Series', values='Value')\n",
         "pivoted_emp_df.columns = ['Informal female', 'Informal male', \n",
@@ -2882,6 +2862,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Melt the data to be transformed to another data structure\n",
         "melted_df = pd.melt(clean_decision_making, id_vars=['Series', 'Country'], \n",
         "                    var_name='Year', value_name='Value')\n",
         "melted_df.tail()"
@@ -3067,6 +3048,8 @@
     {
       "cell_type": "code",
       "source": [
+        "# Pivot the data with rows: year and columns: indicator, and rename the columns\n",
+        "\n",
         "pivoted_df = pd.pivot_table(melted_df, index=['Country','Year'], \n",
         "                            columns='Series', values='Value')\n",
         "pivoted_df.columns = ['Health decision: husband','Health decision: wife','Health decision: jointly',\n",
@@ -3397,7 +3380,7 @@
     {
       "cell_type": "code",
       "source": [
-        "final_df = load_data(\"1w-YMkDywP_Wcz-cVbb3GpkKn85f-f8Rk\")\n",
+        "final_df = load_data(\"1w-YMkDywP_Wcz-cVbb3GpkKn85f-f8Rk\") # Participation data to be forecasted\n",
         "forecast_df = final_df[['Country','Year','All participation','None participation']]\n",
         "forecast_df.head(2)"
       ],
@@ -3407,7 +3390,7 @@
           "height": 112
         },
         "id": "857XOOfQxAHs",
-        "outputId": "8da67f5a-5d9b-49e4-df82-f2ba1412070a"
+        "outputId": "1fb2fd05-cbfc-4e43-dd60-201fe0821ccb"
       },
       "execution_count": null,
       "outputs": [
@@ -3421,7 +3404,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-9e931e6d-86e7-4b44-a827-2ce119f7ea12\">\n",
+              "  <div id=\"df-d644e6da-335f-4935-a4b8-0df4572e5166\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -3465,7 +3448,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9e931e6d-86e7-4b44-a827-2ce119f7ea12')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d644e6da-335f-4935-a4b8-0df4572e5166')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -3516,12 +3499,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-9e931e6d-86e7-4b44-a827-2ce119f7ea12 button.colab-df-convert');\n",
+              "          document.querySelector('#df-d644e6da-335f-4935-a4b8-0df4572e5166 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-9e931e6d-86e7-4b44-a827-2ce119f7ea12');\n",
+              "          const element = document.querySelector('#df-d644e6da-335f-4935-a4b8-0df4572e5166');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -3544,13 +3527,14 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 5
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
+        "# Filter the data \n",
         "indonesia = forecast_df.query('Country==\"Indonesia\"')\n",
         "indonesia_all = indonesia[[\"Year\",\"All participation\"]].set_index(\"Year\")\n",
         "indonesia_none = indonesia[[\"Year\",\"None participation\"]].set_index(\"Year\")"
@@ -3565,7 +3549,6 @@
       "cell_type": "code",
       "source": [
         "# Stationary Test\n",
-        "from statsmodels.tsa.stattools import adfuller\n",
         "\n",
         "for i,j in [(indonesia_all,'All participation:'), (indonesia_none,'None participation:')]:\n",
         "  result = adfuller(i.iloc[:,0].dropna())\n",
@@ -3580,7 +3563,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TiO4jegWyPRy",
-        "outputId": "7152ed7f-a7f5-4a04-e401-c16f5bb120b8"
+        "outputId": "2ace78ff-d22f-40d2-d074-04b11c9ef0df"
       },
       "execution_count": null,
       "outputs": [
@@ -3591,16 +3574,20 @@
             "All participation: Stationary\n",
             "None participation: Not Stationary\n"
           ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "pandas.util.testing is deprecated. Use the functions in the public API at pandas.testing instead.\n"
+          ]
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "import statsmodels.api as sm\n",
-        "from statsmodels.graphics.tsaplots import plot_acf\n",
-        "from statsmodels.graphics.tsaplots import plot_pacf\n",
-        "\n",
+        "# Plot the autocorrelation and the partial autocorrelation\n",
         "plot_acf(indonesia_all.diff().dropna(), lags=indonesia_all.shape[0]-2)\n",
         "plot_pacf(indonesia_all.diff().dropna(), lags=indonesia_all.shape[0])\n",
         "plt.show()"
@@ -3712,10 +3699,7 @@
     {
       "cell_type": "code",
       "source": [
-        "from sklearn.metrics import r2_score\n",
-        "from statsmodels.tsa.api import ARIMA\n",
-        "from sklearn.metrics import mean_squared_error\n",
-        "\n",
+        "# Loop for searching the fit parameter AR & MA with RMSE metrics\n",
         "data_array = indonesia_all.values\n",
         "\n",
         "d=0\n",
@@ -3736,7 +3720,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sjE1S_1X5P-M",
-        "outputId": "6ec4b45b-7e38-4130-9c45-cdc5ea8e1dab"
+        "outputId": "15e7a811-c928-4776-aeb9-596563df720b"
       },
       "execution_count": null,
       "outputs": [
@@ -3746,8 +3730,7 @@
           "text": [
             "(0, 0, 0) 0.97\n",
             "(0, 0, 1) 0.992\n",
-            "(1, 0, 0) 0.973\n",
-            "(2, 0, 0) 0.987\n"
+            "(1, 0, 0) 0.973\n"
           ]
         },
         {
@@ -3762,6 +3745,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "(2, 0, 0) 0.987\n",
             "(2, 0, 1) 0.995\n"
           ]
         },
@@ -3826,8 +3810,7 @@
     {
       "cell_type": "code",
       "source": [
-        "import numpy as np\n",
-        "\n",
+        "# Evaluate the ARMA model\n",
         "step = 5\n",
         "X_train, X_test = data_array[:-step], data_array[-step:]\n",
         "mod = ARIMA(X_train, order=(3,0,0))\n",
@@ -3845,7 +3828,7 @@
           "height": 279
         },
         "id": "Wm0dKjqgExhE",
-        "outputId": "894d8d3e-6320-4d13-ac18-8ffe6e2d8fda"
+        "outputId": "4a69017f-aed7-4b40-979a-7bad87bf1b90"
       },
       "execution_count": null,
       "outputs": [
@@ -3866,8 +3849,7 @@
     {
       "cell_type": "code",
       "source": [
-        "import numpy as np\n",
-        "\n",
+        "# Forecast the all participation until 2025 with ARMA\n",
         "train = indonesia_all.iloc[:,0].values\n",
         "\n",
         "model = ARIMA(train, order=(3, 0, 0))  \n",
@@ -3928,10 +3910,7 @@
     {
       "cell_type": "code",
       "source": [
-        "from sklearn.metrics import r2_score\n",
-        "from statsmodels.tsa.api import ARIMA\n",
-        "from sklearn.metrics import mean_squared_error\n",
-        "\n",
+        "# Loop for searching the fit parameter AR, I & MA with RMSE metrics\n",
         "data_array = indonesia_none.values\n",
         "\n",
         "d=0\n",
@@ -3953,7 +3932,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UsBeX_pASrdy",
-        "outputId": "606c6ec0-fc6f-426b-9384-f33819e8d1c9"
+        "outputId": "5903f1fa-d0ef-41dc-d0b8-0f206d08f49f"
       },
       "execution_count": null,
       "outputs": [
@@ -3986,8 +3965,7 @@
             "(1, 0, 3) 0.491\n",
             "(1, 1, 0) 0.272\n",
             "(2, 0, 0) 0.241\n",
-            "(2, 0, 1) 0.24\n",
-            "(2, 0, 2) 0.232\n"
+            "(2, 0, 1) 0.24\n"
           ]
         },
         {
@@ -4001,6 +3979,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "(2, 0, 2) 0.232\n",
             "(2, 0, 3) 0.512\n",
             "(2, 1, 0) 0.4\n",
             "(3, 0, 0) 0.24\n",
@@ -4014,8 +3993,7 @@
     {
       "cell_type": "code",
       "source": [
-        "import numpy as np\n",
-        "\n",
+        "# Evaluate the ARIMA model\n",
         "step = 3\n",
         "X_train, X_test = data_array[:-step], data_array[-step:]\n",
         "mod = ARIMA(X_train, order=(3,0,3))\n",
@@ -4029,11 +4007,10 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 281
+          "base_uri": "https://localhost:8080/"
         },
         "id": "W3p4rigEUECZ",
-        "outputId": "976a92c3-d9b6-4116-c7b0-e080a71a4fd3"
+        "outputId": "4c8f0c61-ef26-478a-be7a-b6da0c5776ae"
       },
       "execution_count": null,
       "outputs": [
@@ -4054,8 +4031,7 @@
     {
       "cell_type": "code",
       "source": [
-        "import numpy as np\n",
-        "\n",
+        "# Forecast the none participation until 2025 with ARIMA\n",
         "train = indonesia_none.iloc[:,0].values\n",
         "\n",
         "model = ARIMA(train, order=(3, 0, 3))  \n",
@@ -4123,6 +4099,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Merge all participation data with bounds\n",
         "forecast_all = pd.Series(fc_series_all, name='Forecast')\n",
         "real_all = indonesia_all.iloc[:,0].rename('Actual')\n",
         "lb_all = pd.Series(lower_series_all, name='Lower')\n",
@@ -4139,6 +4116,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Merge none participation data with bounds\n",
         "forecast_none = pd.Series(fc_series_none, name='Forecast')\n",
         "real_none = indonesia_none.iloc[:,0].rename('Actual')\n",
         "lb_none = pd.Series(lower_series_none, name='Lower')\n",
@@ -4164,7 +4142,7 @@
     {
       "cell_type": "code",
       "source": [
-        "gender = load_data('1lCrYzpGmOWwaLnYDJvdW6v6gc8CerQVl')"
+        "gender = load_data('1lCrYzpGmOWwaLnYDJvdW6v6gc8CerQVl') # Decision Making Aspects data"
       ],
       "metadata": {
         "id": "UWAYuBT-4BCf"
@@ -4175,6 +4153,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Concat the female and male data to find correlation\n",
         "female = gender[gender.columns[gender.columns.str.endswith('_f')]]\n",
         "male = gender[gender.columns[gender.columns.str.endswith('_m')]]\n",
         "female.columns = np.arange(female.shape[1]).astype(str)\n",
@@ -4192,6 +4171,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Correlation on decision maker with other aspects\n",
         "plt.figure(figsize=(6,8))\n",
         "sns.heatmap(gender_df.corr()[['decision_maker']].sort_values(\n",
         "    by='decision_maker', ascending=False), annot=True)"
@@ -4233,8 +4213,7 @@
     {
       "cell_type": "code",
       "source": [
-        "from scipy.stats import pearsonr\n",
-        "\n",
+        "# Calculate the pearson correlation with p-value stastical significance\n",
         "new_df = {}\n",
         "for i in np.setdiff1d(gender_df.columns.values, ['decision_maker']):\n",
         "  new_df[i] = pearsonr(gender_df['decision_maker'],gender_df[i])\n",
@@ -4249,6 +4228,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Show the correlation and p-value\n",
         "plt.figure(figsize=(6,8))\n",
         "sns.heatmap(new_df.sort_values(\n",
         "    by='decision_maker', ascending=False), annot=True)"
@@ -4304,7 +4284,7 @@
       "collapsed_sections": [
         "SyGQcIp30x01"
       ],
-      "name": "Decision_Making",
+      "name": "Household_Authority_Inequality",
       "provenance": []
     },
     "kernelspec": {
